<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <!--
        Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
        It's to keep this short, so your launcher icon isn't displayed with "The greatest Wea"
        or something similar.
   -->
    <string name="app_name">KidneyApp</string>
    <!--
        By convention, "action" denotes that this String will be used as the label for an Action,
        typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
   -->
    <string name="action_settings">Settings</string>
    <!-- Menu label to fetch updated weather info from the server -->
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="moje">To jest aplikacja nerkowa, bip bip</string>
    <string name="action_share">Share</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">94043</string>

    <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Temperature Units</string>

    <string name="pref_weight_label">Your weight [kg]</string>
    <string name="pref_weight_key" translatable="false">weight</string>
    <string name="pref_weight_default" translatable="false">60</string>

    <string name="pref_height_label">Your height [cm]</string>
    <string name="pref_height_key" translatable="false">height</string>
    <string name="pref_height_default" translatable="false">170</string>

    <string name="pref_phosphorus_label">Phosphorus [mg/day]</string>
    <string name="pref_phosphorus_key" translatable="false">phosphorus</string>
    <string name="pref_phosphorus_default" translatable="false">1</string>

    <string name="pref_potassium_label">Potassium [mg/day]</string>
    <string name="pref_potassium_key" translatable="false">potassium</string>
    <string name="pref_potassium_default" translatable="false">2</string>

    <string name="pref_sodium_label">Sodium [mg/day]</string>
    <string name="pref_sodium_key" translatable="false">sodium</string>
    <string name="pref_sodium_default" translatable="false">2</string>

    <string name="pref_sex_label">Your sex</string>
    <string name="pref_sex_label_male">Male</string>
    <string name="pref_sex_label_female">Female</string>
    <string name="pref_sex_key" translatable="false">sex</string>
    <string name="pref_sex_male" translatable="false">male</string>
    <string name="pref_sex_female" translatable="false">female</string>


    <string name="search_for_food_label">Search</string>
    <string name="search_for_food_key" translatable="false">search</string>

    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_metric">Metric</string>

    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_imperial">Imperial</string>

    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial" translatable="false">imperial</string>


    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=15] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <!-- Temperature format [CHAR LIMIT=5 -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- SyncAdapter related -->
    <!-- nizej ma byc kidney samo czy kidneyapp? -->
    <string name="sync_account_type">kidneyapp.example.com</string>
    <string name="content_authority">com.example.agnieszka.kidneyapp</string>

    <!-- Notification Format -->
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="title_activity_choose_the_meal">ChooseTheMeal</string>

</resources>
